<resources>
    <string name="app_name">Baking App</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="servings">Servings: %d </string>
    <string name="ingredients">Ingredients</string>
    <string name="step_description">Recipe Step %d</string>
    <string name="title_activity_step">StepActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="list_of_ingredients">Ingredients List</string>
    <string name="appwidget_text">Ingredients List</string>
</resources>
