<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/place_holder" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceLarge"
            tools:text="TextView" />
    </LinearLayout>
</androidx.cardview.widget.CardView>